Create seperate command library
(cherry picked from commit 1dd1189c3f4fcf04da1b65819595007f2c78f734)